@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+May 16, 2011
+* [antonin] fixed part of issue 69, when tile-part index is inconsistent with the total number of tile-parts
+
 May 12, 2011
 * [antonin] xcode project file updated (now integrates openjpip)
 
